--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-nav></app-nav>
 <div class ="container">
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
+    <router-outlet ></router-outlet>
 </div>
-<!-- <ul>
-    <li *ngFor="let user of users">{{user.id}}-{{user.userName}}</li>
-    
-</ul> -->
+
