--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,9 +3,9 @@
         <h1>Find your match</h1>
         <p class = "lead"> Come and see you matches .. all you need to do is sign up!</p>
         <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-lrg mr-2">Register</button>
+            <button (click)="registerToggle()" class="btn btn-success btn-lrg mr-2">Register</button>
             
-            <button class="btn btn-info btn-lrg ">Learn more</button>
+            <button class="btn btn-dark btn-lrg ">Learn more</button>
         </div>
     </div>
     <div class="container" *ngIf="registerMode" >
