--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -14,9 +14,13 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
-                </li>       
-             </ng-container>
-
+                </li>  
+                
+              </ng-container>
+              
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
+              </li>
 
 
             </ul>
