End of section 8

--- a/client/src/app/Errors/server-error/server-error.component.html
+++ b/client/src/app/Errors/server-error/server-error.component.html
@@ -1,6 +1,9 @@
-<h4>
-    Internal server errror - refreshing the page will make the error dissapear!
-</h4>
+<div class="container" style="text-align:center">
+
+    <h4>
+        Internal server errror - refreshing the page will make the error dissapear!
+    </h4>
+</div>
 <ng-container *ngIf="error">
     <h5 class="text-danger"> ERROR: {{error.message}}</h5>
     <p>What to do next? Check the list below:</p>
